<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allergen_list"
        android:name="com.bpr.allergendetector.ui.allergenlist.AllergenListFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:fitsSystemWindows="true"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.allergenlist.AllergenListFragment"
        tools:listitem="@layout/allergen_item" />

    <View
        android:id="@+id/bottomBarrier"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.01"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/goBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:selectableItemBackground"
        android:backgroundTint="@color/purple_200"
        android:clickable="true"
        android:contentDescription="@string/add_allergen"
        android:focusable="true"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:selectableItemBackground"
        android:backgroundTint="@color/purple_200"
        android:clickable="true"
        android:contentDescription="@string/add_allergen"
        android:focusable="true"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@android:drawable/ic_menu_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        android:focusable="true"
        android:orientation="vertical"
        android:text="@string/go_back"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/floatingAddButton"
        app:layout_constraintStart_toEndOf="@+id/floatingShareButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
