...
        android:background="@drawable/custom_background"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:textAppearance="?attr/textAppearanceListItem" />

    <ImageButton
        android:id="@+id/allergen_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1.5"
        android:contentDescription="@string/edit_allergen"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/allergen_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1.5"
        android:contentDescription="@string/remove_allergen"
        app:srcCompat="@android:drawable/ic_menu_delete" />
...
