...
            android:text="@string/add_allergen"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/allergenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
...
                android:gravity="center"
                android:text="@string/mild"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/severitySeekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:max="2"
                android:paddingHorizontal="40dp"
...
